# hyperstellar

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  build_editor.ps1  build_python.ps1  publish_to_pypi.ps1  pyproject.toml  simulation_wrapper.h
_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  stellar.vcxproj  stellar.vcxproj.filters  stellar_python.slnx
_build/Release/: stellar.exp  stellar.lib
_build/pybind11/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  pybind11.slnx
_build/stellar.dir/Release/: stellar.cp313-win_amd64.pyd.recipe
_build/stellar.dir/Release/stellar.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
_build/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
_build/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
_build/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
_build/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
examples/: boids.py  mcmc.py  orbit.py  pendulum.py  pendulum_demo.py  quantum_mcmc.py  two_body_physics.py
hyperstellar/src/hyperstellar/: __init__.py  __init__.pyi
hyperstellar/src/hyperstellar/_native/windows-x64/shaders/: math.comp
include/: async_shader_loader.h  axis.h  buffer_helpers.h  camera.h  common_definitions.h  constraints.h  debug_helpers.h  framebuffer.h  globals.h  gpu_serializer.h  grid.h  imgui_styles.h  input_handler.h  objects.h  parser.h  physics_system.h  renderer.h  renderer_internals.h  shader_utils.h  stb_image.h  text_renderer.h  ui_manager.h  utils.h  vectorfield.h
include/glad/: glad.h
python_module/: CMakeLists.txt  bindings.cpp  simulation_wrapper.cpp  simulation_wrapper.h
python_module/shaders/: axis.frag  axis.vert  fragShader.frag  math.comp  quad.frag  vertexShader.vert
shaders/: geoShader.geom
src/: axis.cpp  camera.cpp  debug_helpers.cpp  framebuffer.cpp  glad.c  globals.cpp  grid.cpp  imgui_styles.cpp  input_handler.cpp  main.cpp  objects.cpp  parser.cpp  physics_system.cpp  renderer.cpp  renderer_init.cpp  renderer_methods.cpp  renderer_phase.cpp  renderer_physics.cpp  renderer_textures.cpp  renderer_world.cpp  shader_utils.cpp  text_renderer.cpp  ui_manager.cpp  utils.cpp  vectorfield.cpp
tests/: speed_benchmark_results.json  speed_summary.txt  test.py
